# dbircsak

./: README.md  tools.md
SimpleXmlJsonConverter/: CMakeLists.txt  README.md  SimpleXmlJsonConverter.cpp  SimpleXmlJsonConverter.hpp  expected_min.json  main.cpp
combine_video/: FFprobeSummary.bat  ListVideos.bat  NormalizeAndCombine_FromList.bat  README.md
